clientelling/objects/Contact.object
<CustomObject>
   <fields>
        <fullName>Cust360_Contact_Picture_URL__c</fullName>
        <label>Contact Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Retail Custom FIeld</description>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                    <isActive>false</isActive>
                    <label>F</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <isActive>false</isActive>
                    <label>M</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <description>Retail Custom Field</description>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widow</fullName>
                </value>
                <value>
                    <fullName>Widower</fullName>
                </value>
                <value>
                    <fullName>Domestic Partnership</fullName>
                </value>
                <value>
                    <fullName>Never married</fullName>
                    <isActive>false</isActive>
                    <label>Never married</label>
                </value>
                <value>
                    <fullName>Separated</fullName>
                    <isActive>false</isActive>
                    <label>Separated</label>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                    <isActive>false</isActive>
                    <label>Widowed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Sales/Office</fullName>
                </value>
                <value>
                    <fullName>Farming/Fishing</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Production/Transport</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>